crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__expected_function.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\nfn foo() { let a = 3; a(); }\")"
---
error: expected function, found `{integer}`
 --> main.mun:3:23
  |
3 | fn foo() { let a = 3; a(); }
  |                       ^ not a function
  |
